BalsaPluginBase/src/org/workcraft/parsers/breeze/javacc/BreezeParser.java
/* Generated By:JavaCC: Do not edit this line. BreezeParser.java */
package org.workcraft.parsers.breeze.javacc;

import org.workcraft.parsers.breeze.*;
import org.workcraft.parsers.breeze.dom.*;
import org.workcraft.parsers.breeze.expressions.*;

import java.io.InputStream;
import java.util.List;
import java.util.LinkedList;
import java.util.ArrayList;
import java.io.BufferedReader;
import java.io.InputStreamReader;

import pcollections.*;

@SuppressWarnings("all")
public class BreezeParser implements BreezeParserConstants {
        public static LispNode parse (InputStream is) throws ParseException {
                BreezeParser parser = new BreezeParser(new BufferedReader(new InputStreamReader(is)));
                return parser.listElement();
        }

        public static PrimitivePart parsePrimitivePart(InputStream is) throws ParseException
        {
          BreezeParser parser = new BreezeParser(new BufferedReader(new InputStreamReader(is)));
          return parser.primitivePart();
        }

        public static BreezeFile parseBreezeFile(InputStream is) throws ParseException
        {
                return new BreezeParser(new BufferedReader(new InputStreamReader(is))).breezeFile();
        }

        ParameterType stringType()
        {
                throw new org.workcraft.exceptions.NotImplementedException();
        }

        ParameterType cardinalType()
        {
                throw new org.workcraft.exceptions.NotImplementedException();
        }

        ParameterType namedType(String name)
        {
                throw new org.workcraft.exceptions.NotImplementedException();
        }

  final public List<LispNode> listBody() throws ParseException {
        ArrayList<LispNode> result = new ArrayList<LispNode>();
        LispNode o;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRIMITIVE_PART:
      case ZERO:
      case VARIABLE_ARRAY_TYPE:
      case INTEGER:
      case ACTIVE:
      case PASSIVE:
      case INPUT:
      case INP:
      case OUTPUT:
      case NAMED_TYPE:
      case NUMERIC_TYPE:
      case BOOL_FALSE:
      case PARAMETERS:
      case PARAM:
      case PORTS:
      case PORT:
      case SYNC_PORT:
      case ARRAYED_PORT:
      case ARRAYED_SYNC_PORT:
      case SYMBOL:
      case CENTER_STRING:
      case IMPLEMENTATION:
      case TYPE_STRING:
      case CASE:
      case ELSE:
      case STRING_APPEND:
      case NUMBER_TO_STRING:
      case PLUS:
      case SYNC:
      case PUSH:
      case PULL:
      case CHANNELS:
      case ATTRIBUTES:
      case COMPONENTS:
      case COMPONENT:
      case BREEZE_PART:
      case TYPE:
      case IMPORT:
      case OBR:
      case QUOTED_VALUE:
      case VALUE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      o = listElement();
                       result.add(o);
    }
   {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public LispNode list() throws ParseException {
        List<LispNode> result;
    jj_consume_token(OBR);
    result = listBody();
    jj_consume_token(CBR);
   {if (true) return new LispNode(result);}
    throw new Error("Missing return statement in function");
  }

  final public String value() throws ParseException {
                  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VALUE:
      t = jj_consume_token(VALUE);
                        {if (true) return t.image;}
      break;
    case QUOTED_VALUE:
      t = jj_consume_token(QUOTED_VALUE);
                               {if (true) return t.image.substring(1, t.image.length()-1);}
      break;
    case PRIMITIVE_PART:
    case VARIABLE_ARRAY_TYPE:
    case ACTIVE:
    case PASSIVE:
    case INPUT:
    case INP:
    case OUTPUT:
    case NAMED_TYPE:
    case NUMERIC_TYPE:
    case BOOL_FALSE:
    case PARAMETERS:
    case PARAM:
    case PORTS:
    case PORT:
    case SYNC_PORT:
    case ARRAYED_PORT:
    case ARRAYED_SYNC_PORT:
    case SYMBOL:
    case CENTER_STRING:
    case IMPLEMENTATION:
    case TYPE_STRING:
    case CASE:
    case ELSE:
    case STRING_APPEND:
    case NUMBER_TO_STRING:
    case PLUS:
    case SYNC:
    case PUSH:
    case PULL:
    case CHANNELS:
    case ATTRIBUTES:
    case COMPONENTS:
    case COMPONENT:
    case BREEZE_PART:
    case TYPE:
    case IMPORT:
      t = keyword();
                          {if (true) return t.image;}
      break;
    case ZERO:
    case INTEGER:
      t = integerToken();
                               {if (true) return t.image;}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public LispNode listElement() throws ParseException {
                           String t; LispNode l;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIMITIVE_PART:
    case ZERO:
    case VARIABLE_ARRAY_TYPE:
    case INTEGER:
    case ACTIVE:
    case PASSIVE:
    case INPUT:
    case INP:
    case OUTPUT:
    case NAMED_TYPE:
    case NUMERIC_TYPE:
    case BOOL_FALSE:
    case PARAMETERS:
    case PARAM:
    case PORTS:
    case PORT:
    case SYNC_PORT:
    case ARRAYED_PORT:
    case ARRAYED_SYNC_PORT:
    case SYMBOL:
    case CENTER_STRING:
    case IMPLEMENTATION:
    case TYPE_STRING:
    case CASE:
    case ELSE:
    case STRING_APPEND:
    case NUMBER_TO_STRING:
    case PLUS:
    case SYNC:
    case PUSH:
    case PULL:
    case CHANNELS:
    case ATTRIBUTES:
    case COMPONENTS:
    case COMPONENT:
    case BREEZE_PART:
    case TYPE:
    case IMPORT:
    case QUOTED_VALUE:
    case VALUE:
      t = value();
                        {if (true) return new LispNode(t);}
      break;
    case OBR:
      l = list();
                       {if (true) return l;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Token keyword() throws ParseException {
                   Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIMITIVE_PART:
      t = jj_consume_token(PRIMITIVE_PART);
      break;
    case VARIABLE_ARRAY_TYPE:
      t = jj_consume_token(VARIABLE_ARRAY_TYPE);
      break;
    case ACTIVE:
      t = jj_consume_token(ACTIVE);
      break;
    case PASSIVE:
      t = jj_consume_token(PASSIVE);
      break;
    case INPUT:
      t = jj_consume_token(INPUT);
      break;
    case INP:
      t = jj_consume_token(INP);
      break;
    case OUTPUT:
      t = jj_consume_token(OUTPUT);
      break;
    case NAMED_TYPE:
      t = jj_consume_token(NAMED_TYPE);
      break;
    case NUMERIC_TYPE:
      t = jj_consume_token(NUMERIC_TYPE);
      break;
    case BOOL_FALSE:
      t = jj_consume_token(BOOL_FALSE);
      break;
    case PARAMETERS:
      t = jj_consume_token(PARAMETERS);
      break;
    case PARAM:
      t = jj_consume_token(PARAM);
      break;
    case PORTS:
      t = jj_consume_token(PORTS);
      break;
    case PORT:
      t = jj_consume_token(PORT);
      break;
    case SYNC_PORT:
      t = jj_consume_token(SYNC_PORT);
      break;
    case ARRAYED_PORT:
      t = jj_consume_token(ARRAYED_PORT);
      break;
    case ARRAYED_SYNC_PORT:
      t = jj_consume_token(ARRAYED_SYNC_PORT);
      break;
    case SYMBOL:
      t = jj_consume_token(SYMBOL);
      break;
    case CENTER_STRING:
      t = jj_consume_token(CENTER_STRING);
      break;
    case IMPLEMENTATION:
      t = jj_consume_token(IMPLEMENTATION);
      break;
    case TYPE_STRING:
      t = jj_consume_token(TYPE_STRING);
      break;
    case CASE:
      t = jj_consume_token(CASE);
      break;
    case ELSE:
      t = jj_consume_token(ELSE);
      break;
    case STRING_APPEND:
      t = jj_consume_token(STRING_APPEND);
      break;
    case NUMBER_TO_STRING:
      t = jj_consume_token(NUMBER_TO_STRING);
      break;
    case PLUS:
      t = jj_consume_token(PLUS);
      break;
    case SYNC:
      t = jj_consume_token(SYNC);
      break;
    case PUSH:
      t = jj_consume_token(PUSH);
      break;
    case PULL:
      t = jj_consume_token(PULL);
      break;
    case CHANNELS:
      t = jj_consume_token(CHANNELS);
      break;
    case ATTRIBUTES:
      t = jj_consume_token(ATTRIBUTES);
      break;
    case COMPONENTS:
      t = jj_consume_token(COMPONENTS);
      break;
    case COMPONENT:
      t = jj_consume_token(COMPONENT);
      break;
    case BREEZE_PART:
      t = jj_consume_token(BREEZE_PART);
      break;
    case TYPE:
      t = jj_consume_token(TYPE);
      break;
    case IMPORT:
      t = jj_consume_token(IMPORT);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public ParameterType parameterType() throws ParseException {
                                  ParameterType result; String typeName;
    if (jj_2_1(2147483647)) {
      jj_consume_token(OBR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TYPE_STRING:
        jj_consume_token(TYPE_STRING);
                                        result = stringType();
        break;
      case NAMED_TYPE:
        jj_consume_token(NAMED_TYPE);
        typeName = value();
                                                     result = namedType(typeName);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(CBR);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OBR:
        numericType();
                                  result = cardinalType();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public ParameterDeclaration parameter() throws ParseException {
  String name;
  ParameterType type;
    jj_consume_token(OBR);
    name = value();
    type = parameterType();
    listBody();
    jj_consume_token(CBR);
          {if (true) return new ParameterDeclaration (name, type);}
    throw new Error("Missing return statement in function");
  }

  final public PVector<ParameterDeclaration> parameters() throws ParseException {
   PVector<ParameterDeclaration> result = TreePVector.<ParameterDeclaration>empty();
   ParameterDeclaration o;
    jj_consume_token(OBR);
    jj_consume_token(PARAMETERS);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OBR:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      o = parameter();
                   result = result.plus(o);
    }
    jj_consume_token(CBR);
   {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public boolean dataDirectionIsInput() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INPUT:
    case INP:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INPUT:
        jj_consume_token(INPUT);
        break;
      case INP:
        jj_consume_token(INP);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                          {if (true) return true;}
      break;
    case OUTPUT:
      jj_consume_token(OUTPUT);
                     {if (true) return false;}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Token integerToken() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      t = jj_consume_token(INTEGER);
      break;
    case ZERO:
      t = jj_consume_token(ZERO);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                       {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public int integer() throws ParseException {
        Token t;
    t = integerToken();
                {if (true) return Integer.parseInt(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public Expression<Integer> constantIntegerExpression() throws ParseException {
        int result;
    result = integer();
          {if (true) return new Constant<Integer>(result);}
    throw new Error("Missing return statement in function");
  }

  final public Expression<String> constantStringExpression() throws ParseException {
        String s;
    s = value();
   {if (true) return new Constant<String>(s);}
    throw new Error("Missing return statement in function");
  }

  final public Expression<?> parameterizedExpression() throws ParseException {
        String paramName;
    jj_consume_token(OBR);
    jj_consume_token(PARAM);
    paramName = value();
    jj_consume_token(CBR);
          {if (true) return new ParameterReference<Object>(paramName);}
    throw new Error("Missing return statement in function");
  }

  final public Expression<String> numberToStringExpression() throws ParseException {
  Expression<Integer> intExpression;
    jj_consume_token(OBR);
    jj_consume_token(NUMBER_TO_STRING);
    intExpression = integerExpression();
    jj_consume_token(CBR);
          {if (true) return new ToStringExpression<Integer>(intExpression);}
    throw new Error("Missing return statement in function");
  }

  final public Expression<String> stringAppendExpression() throws ParseException {
        Expression<String> result;
        Expression<String> str2;
    jj_consume_token(OBR);
    jj_consume_token(STRING_APPEND);
    result = stringAppendBody();
    jj_consume_token(CBR);
          {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public Expression<String> stringAppendBody() throws ParseException {
        Expression<String> str;
        List<Expression<String>> strs = new ArrayList<Expression<String>>();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRIMITIVE_PART:
      case ZERO:
      case VARIABLE_ARRAY_TYPE:
      case INTEGER:
      case ACTIVE:
      case PASSIVE:
      case INPUT:
      case INP:
      case OUTPUT:
      case NAMED_TYPE:
      case NUMERIC_TYPE:
      case BOOL_FALSE:
      case PARAMETERS:
      case PARAM:
      case PORTS:
      case PORT:
      case SYNC_PORT:
      case ARRAYED_PORT:
      case ARRAYED_SYNC_PORT:
      case SYMBOL:
      case CENTER_STRING:
      case IMPLEMENTATION:
      case TYPE_STRING:
      case CASE:
      case ELSE:
      case STRING_APPEND:
      case NUMBER_TO_STRING:
      case PLUS:
      case SYNC:
      case PUSH:
      case PULL:
      case CHANNELS:
      case ATTRIBUTES:
      case COMPONENTS:
      case COMPONENT:
      case BREEZE_PART:
      case TYPE:
      case IMPORT:
      case OBR:
      case QUOTED_VALUE:
      case VALUE:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
      str = stringExpression();
                                    strs.add(str);
    }
          {if (true) return new StringConcatenateExpression(strs);}
    throw new Error("Missing return statement in function");
  }

  final public Expression<String> stringCaseExpression() throws ParseException {
        Expression<String> condition;
        Expression<String> value;

        Expression<String> toCheck;
        List<Expression<String>> conditions = new ArrayList<Expression<String>>();
        List<Expression<String>> values = new ArrayList<Expression<String>>();
        Expression<String> elseValue;
    jj_consume_token(OBR);
    jj_consume_token(CASE);
    toCheck = stringExpression();
    label_4:
    while (true) {
      if (jj_2_2(2147483647)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(OBR);
      jj_consume_token(OBR);
      condition = stringExpression();
      jj_consume_token(CBR);
      value = stringExpression();
      jj_consume_token(CBR);
                          conditions.add(condition); values.add(value);
    }
    jj_consume_token(OBR);
    jj_consume_token(ELSE);
    elseValue = stringExpression();
    jj_consume_token(CBR);
    jj_consume_token(CBR);
          {if (true) return new CaseExpression<String, String>(toCheck, conditions, values, elseValue);}
